--- a/sema-apex-mocks/main/default/classes/fflib_ApexMocksUtils.cls
+++ b/sema-apex-mocks/main/default/classes/fflib_ApexMocksUtils.cls
@@ -64,13 +64,43 @@ public class fflib_ApexMocksUtils
 	 *		        }
 	 * 		]
 	 */
-	public static Object makeRelationship(Type parentsType, List<SObject> parents, SObjectField relationshipField, List<List<SObject>> children)
-	{
-		// Find out more about this relationship... 
+	public static Object makeRelationship(Type parentsType, List<SObject> parents, SObjectField relationshipField, List<List<SObject>> children) {
+
+		// Find out more about this relationship...
 		String relationshipFieldName = relationshipField.getDescribe().getName();
 		DescribeSObjectResult parentDescribe = parents.getSObjectType().getDescribe();
-		List<Schema.ChildRelationship> childRelationships = parentDescribe.getChildRelationships();
-		String relationshipName = null;
+		return deserializeParentsAndChildren(parentsType, parentDescribe, relationshipField, parents, children);
+	}
+
+    /**
+     * Generic overload to makeRelationship. Enables creation of
+     * relationships in a loosely-coupled manner. 
+     **/
+	public static Object makeRelationship(
+			String parentTypeName,
+			String childTypeName,
+			List<SObject> parents,
+			String relationshipFieldName,
+			List<List<SObject>> children) {
+
+		// Find out more about this relationship...
+        SObjectType parentType = getType(parentTypeName);
+		SObjectField relationshipField = getField(childTypeName, relationshipFieldName);
+        DescribeSObjectResult parentDescribe = parentType.getDescribe();
+        Type parentsType = List<SObject>.class;
+        return deserializeParentsAndChildren(parentsType, parentDescribe, relationshipField, parents, children);
+	}
+
+    private static Object deserializeParentsAndChildren(
+        Type parentsType,
+        DescribeSObjectResult parentDescribe,
+        SObjectField relationshipField,
+        List<SObject> parents,
+        List<List<SObject>> children
+    ) {
+        List<Schema.ChildRelationship> childRelationships = parentDescribe.getChildRelationships();
+
+        String relationshipName = null;
 		for(Schema.ChildRelationship childRelationship : childRelationships) {
 			if(childRelationship.getField() == relationshipField) {
 				relationshipName = childRelationship.getRelationshipName();
@@ -86,7 +116,7 @@ public class fflib_ApexMocksUtils
 
 		// Derserialise back into SObject list complete with children
 		return JSON.deserialize(combinedOutput.getAsString(), parentsType);
-	}
+    }
 
 	/**
 	 * Monitors stream events for end of object for each SObject contained in the parent list
@@ -171,5 +201,31 @@ public class fflib_ApexMocksUtils
 	private interface JSONParserEvents
 	{
 		void nextToken(JSONParser fromStream, Integer depth, JSONGenerator toStream);
+	}
+
+    /**
+     * Gets the SObjectType by name
+     **/
+    private static Schema.SObjectType getType(String typeName) {
+        Map<String, Schema.SObjectType> gd = Schema.getGlobalDescribe();
+		SObjectType sobjType = gd.get(typeName);
+        if (sobjType == null) {
+            throw new fflib_ApexMocks.ApexMocksException('SObject type not found: ' + typeName);
+        }
+        return sobjType;
+    }
+
+    /**
+     * Gets the SObjectField of an object by name
+     **/
+    private static Schema.SObjectField getField(String objectName, String fieldName) {
+
+        SObjectType sobjType = getType(objectName);
+		Map<String, Schema.SObjectField> objectFields = sobjType.getDescribe().fields.getMap();
+        Schema.SObjectField sobjField = objectFields.get(fieldName);
+        if (sobjField == null) {
+            throw new fflib_ApexMocks.ApexMocksException('SObject field not found: ' + fieldName);
+        }
+		return sobjField;
 	}
 }
